# MorpheusGL

./: .gitmodules  CMakeLists.txt  Morpheus.sln  README.md  morpheus.code-workspace
Engine/: Morpheus.vcxproj  Morpheus.vcxproj.filters  basic_shader.cpp  basic_shader.hpp  basicmat.json  camera.cpp  camera.hpp  cameracontroller.cpp  cameracontroller.hpp  config.json  content.cpp  content.h  content.hpp  cooktorrance.cpp  cooktorrance.hpp  core.cpp  core.hpp  digraph.cpp  digraph.hpp  engine.cpp  engine.hpp  forwardrenderer.cpp  forwardrenderer.hpp  funcvizmaterial.json  geometry.cpp  geometry.h  geometry.hpp  graph.hpp  gui.cpp  gui.h  gui.hpp  halfedge.cpp  halfedge.hpp  halfedgeloader.cpp  halfedgeloader.hpp  input.cpp  input.hpp  lambert.cpp  lambert.hpp  main.cpp  (+32 more)
Engine/shaders/: basic.frag  basic.json  cooktorrance.frag  cooktorrance.glsl  cooktorrance.json  funcviz.frag  funcviz.json
EngineTest/: DigraphTest.cpp  EngineTest.vcxproj  EngineTest.vcxproj.filters  PoolTest.cpp
LapViewer/: LapViewer.vcxproj  LapViewer.vcxproj.filters  config.json  main.cpp
PBR/: PBR.vcxproj  PBR.vcxproj.filters  compute_lambert.glsl  config.json  main.cpp  pbr.frag  pbr.json  pbrmat.json
blit-test/: CMakeLists.txt  config.json  main.cpp
compute-sh-coeffs/: CMakeLists.txt  config.json  main.cpp
compute-sh-coeffs/content/: test.comp
compute-test/: CMakeLists.txt  main.cpp
compute-test/content/: test.comp
engine/: CMakeLists.txt
engine/include/engine/: accelerator.hpp  blend.hpp  blit.hpp  brdf.hpp  bvh.hpp  camera.hpp  cameracontroller.hpp  content.hpp  core.hpp  debugbatch.hpp  digraph.hpp  engine.hpp  forwardrenderer.hpp  framebuffer.hpp  geobase.hpp  geometry.hpp  ggx.hpp  glslpreprocessor.hpp  gui.hpp  halfedge.hpp  halfedgeloader.hpp  hdri2cube.hpp  lambert.hpp  lambertsh.hpp  mapcpy.hpp  material.hpp  meshlap.hpp  morpheus.hpp  pool.hpp  samplefunction.hpp  sampler.hpp  scene.hpp  shader.hpp  shader_rc.hpp  skybox.hpp  sphericalharmonics.hpp  spritebatch.hpp  staticmesh.hpp  texture.hpp  updater.hpp
engine/shaders/: blit.frag  blit.json  blit.vert  brdf.glsl  convggx.comp  convggx2.comp  cooktorrancelut.comp  cubemap.glsl  default.frag  default.json  default.vert  ggx.glsl  hammersley.glsl  hammersly.glsl  hdri2cube.comp  lambert.comp  lambertsh.comp  normal.glsl  postprocessor.frag  simplepbr.frag  simplepbr.json  simplepbr.vert  simplepbrtex.frag  simplepbrtex.json  skybox.frag  skybox.json  skybox.vert  sphericalharmonics.glsl  spritebatch.frag  spritebatch.geom  spritebatch.json  spritebatch.vert
engine/shaders/cpp/: CMakeLists.txt  embedfile.cpp
engine/src/: blend.cpp  blit.cpp  brdf.cpp  bvh.cpp  camera.cpp  cameracontroller.cpp  content.cpp  core.cpp  debugbatch.cpp  digraph.cpp  engine.cpp  forwardrenderer.cpp  framebuffer.cpp  geobase.cpp  geometry.cpp  ggx.cpp  glslpreprocessor.cpp  gui.cpp  halfedge.cpp  halfedgeloader.cpp  hdri2cube.cpp  input.cpp  lambert.cpp  lambertsh.cpp  material.cpp  meshlap.cpp  samplefunction.cpp  sampler.cpp  scene.cpp  shader.cpp  skybox.cpp  sphericalharmonics.cpp  spritebatch.cpp  staticmesh.cpp  texture.cpp  updater.cpp
glad/GL/include/glad/: glad.h
glad/GL/src/: glad.c
lapviewer/: CMakeLists.txt  config.json  main.cpp
lapviewer/content/: basicmat.json  funcvizmaterial.json
lapviewer/content/shaders/: basic.json  basic.vert  cooktorrance.frag  cooktorrance.glsl  cooktorrance.json  funcviz.frag  funcviz.json  funcviz.vert
pbr/: CMakeLists.txt  config.json  main.cpp
pbr/content/: brdf.comp  cerberus.json  cerberusmat.json  ggx.comp  pbr.frag  pbr.json  pbrmat.json  spheremesh.json
simple-app/: CMakeLists.txt  config.json  main.cpp
simple-pbr/: CMakeLists.txt  config.json  main.cpp
simple-pbr/content/: pbrmat.json
sprite-batch/: CMakeLists.txt  config.json  main.cpp
test/: main.cpp  test.vcxproj
